# weavz-python-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
tests/: test_edge_cases.py  test_generated_integrations.py  test_sdk.py
weavz_sdk/: __init__.py  adapters.py  client.py  errors.py  integrations.py  models.py  pieces.py
