[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weavz-sdk"
version = "0.1.0"
description = "Python SDK for Weavz stateful agent runtime APIs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Weavz", email = "support@weavz.io" },
]
keywords = ["weavz", "sdk", "api", "integrations", "mcp", "agents", "agent-runtime", "stateful-agents", "filesystem", "sandbox"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.25.0",
  "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://weavz.io"
Repository = "https://github.com/weavz/weavz-python-sdk"
Documentation = "https://weavz.io/docs/sdks/python"
Issues = "https://github.com/weavz/weavz-python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["weavz_sdk"]
